# gmae

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  debug_settings.json  game_settings.json  settings.json
.cargo/: config.toml
.github/workflows/: ci.yml
assets/lvl/bug_detection/: lvl.glb
assets/lvl/debug/: collisions.json
assets/mesh/: dummy.glb  enemy.glb  hp.glb  numbers.glb  numbers.gltf  pizza.glb  player.glb  player2.glb  triangle.glb  triangle.gltf
lib/: Cargo.toml
lib/src/entity/: level.rs  mod.rs  point.rs  voxel.rs
lib/src/entity/level/: creature.rs  mod.rs  voxel_plate.rs  voxel_stack.rs
lib/src/util/: debug_settings.rs  game_settings.rs  math.rs  mod.rs
src/: main.rs  physic_layers.rs  util.rs
src/audio/: mod.rs
src/creature/: mod.rs
src/creature/buffs/: mod.rs  sprint.rs  system.rs
src/creature/component/: combat_parameters.rs  hp.rs  mod.rs  moving.rs  physiology_description.rs
src/creature/component/attack/: component.rs  event.rs  mod.rs  number.rs  system.rs
src/creature/component/attack/shooting/: bullet.rs  direct_bullet.rs  mod.rs
src/creature/component/attack/util/: mod.rs  raytracer.rs
src/creature/component/movement/: locomotivity.rs  mod.rs  random_movement.rs
src/creature/dummy/: mod.rs
src/creature/mob/: dummy.rs  mod.rs  pizza.rs
src/creature/pizza/: mod.rs
src/entity/: mod.rs  point.rs  voxel.rs
src/entity/component/: hp.rs  mod.rs
src/level/: mod.rs  porter.rs  reader.rs  render.rs  util.rs
src/level/lvls/bug_detection/: r.0.0.mca
src/level/lvls/debug/: r.0.0.mca
src/level/lvls/debug/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
src/level/lvls/lvl1/: r.0.0.mca
src/level/lvls/village/: r.0.0.mca
src/level/render/: material.rs  merge.rs  mesh.rs  mod.rs  named_materials.rs  voxel_sequence.rs
src/level/render/shape/: cube.rs  mod.rs  triangle_prism.rs
src/particle/: mod.rs
src/player/: mod.rs
src/player/animation/: mod.rs
src/player/attack/: mod.rs
src/player/entity/: mod.rs
src/player/system/: camera.rs  keyboard_interaction.rs  mod.rs  sprint.rs
src/system/: camera.rs  fly_camera.rs  light.rs  menu.rs  mod.rs
src/ui/: dialog.rs  hp.rs  menu.rs  mod.rs  settings.rs
src/util/: math.rs  mod.rs
src/util/component/: mod.rs  short_life.rs
